Enhance private key loading for Salesforce JWT
Updated SalesforceJwtGenerator to support loading private keys from file path, classpath, or raw PEM content. Adjusted documentation and default configuration to reflect these options, improving flexibility for different deployment scenarios.